--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-  "name": "nextjs",
+  "name": "myblogapp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "build": "next build && next export ",
+    "start": "next start",
+    "export": "npm run build && next export -o _static"
   },
   "dependencies": {
-    "next": "10.0.5",
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "lodash": "^4.17.21",
+    "mdbreact": "^5.0.1",
+    "next": "10.0.7",
+    "next-compose-plugins": "^2.2.1",
+    "next-images": "^1.7.0",
+    "next-optimized-images": "^2.6.2",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
